fix panel overflow issue

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -196,7 +196,7 @@ body {
                 box-sizing: border-box;
         padding-bottom: 20px;
         padding-top: 20px;
-        height: 400px;
+        height: auto;
     }
 
     #myContent {
@@ -217,5 +217,9 @@ body {
     body canvas:last-child {
         width: 100% !important;
         height: 100vh !important;
+    }
+
+    .xeokit-logo-image {
+        display: none;
     }
 }
